--- a/config/yui_editor.yml
+++ b/config/yui_editor.yml
@@ -13,6 +13,7 @@ editor_config_javascript: "
 {
   handleSubmit: true,
   autoHeight: false,
+  width: '950px',
   dompath: false,
   collapse: false,
   toolbar: {
