--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,10 @@
 /.loadpath
 /config/additional_environment.rb
 /config/configuration.yml
+/config/environments/development.rb
 /config/database.yml
 /config/email.yml
+/config/old_email.yml
 /config/initializers/session_store.rb
 /coverage
 /db/*.db
