--- a/config/settings.yml
+++ b/config/settings.yml
@@ -256,8 +256,27 @@ info_fs:
 info_promoted_fs:
   default: 0
 template_privacy:
-  default: "Definire l'autorizzazione al trattamento dati
+  default: "Definire l'autorizzazione al trattamento dati:
+INFORMATIVA D.Lgs. 30/6/2003 n. 196 - 'Riservatezza dei dati personali':<br /> FISCOSPORT srl, editore e titolare del sito, La informano che i Suoi dati verranno trattati in versione informatica o cartacea, secondo modalità strettamente strumentali ai SERVIZI FISCOSPORT.<br /> Essi saranno trattati direttamente dalle nostre aziende, da ns. dipendenti e/o collaboratori, dai nostri Consulenti FISCOSPORT.<br /> I Suoi dati non potranno essere da noi comunicati ad altri.<br /> La informiamo inoltre, che ai sensi del citato decreto, Lei ha il diritto di conoscere, aggiornare, cancellare, rettificare i Suoi dati o opporsi all'utilizzo degli stessi, se trattati in violazione della legge.<br /> Onde permettere al nostro server il riconoscimento automatico dell'utente ed evitare così ogni volta la digitazione di login e password, le Sue informazioni saranno registrate in un cookie sul Suo computer e saranno utilizzate automaticamente quando Lei visiterà il sito www.fiscosport.it
   "
 template_condition:
-  default: "Definire le condizioni d'uso
+  default: "Definire le condizioni d'uso:
+<p>
+A seguito della registrazione, l'utente usufruisce del libero accesso ad ogni partizione del sito www.fiscosport.it  per un periodo di prova gratuita di 40 giorni (che si riduce a 10 giorni se il sistema riconosce l'utente già registrato con altro codice e che si azzera se lo stesso utente effettua la registrazione con tre diversi codici per usufruire più volte della registrazione gratuita).
+</p> <br />
+<p>
+Il periodo gratuito aumenta di 60 giorni se l’utente utilizza un codice promozione/segnalatore (se ne è in possesso) oppure se viene segnalato da un collaboratore o da un utente Fiscosport abilitato. Per maggiori informazioni contattare la Segreteria Fiscosport (dal lunedì al venerdì: tel. 0183/76.72.06 – e-mail: segreteria@fiscosport.it). Il periodo è maggiore se abilitato da CONI/FSN/DSA/EPS aderente al progetto 2007-2010 (es. 31/12/2010 per i C.R. e C.P. CONI o Fsn/Dsa/Eps aderenti).
+</p> <br />
+<p>
+La registrazione gratuita dell'utente, in ogni caso, non impegna lo stesso per il futuro, in quanto al termine del periodo gratuito verranno automaticamente disattivate le chiavi di accesso alla partizione riservata (>>), mentre potrà sempre mantenere la posizione per consultare la partizione gratuita (>>) e ricevere le e-mail di segnalazione degli aggiornamenti e delle novità.
+</p> <br />
+<p>
+L’utente autorizza fin d'ora FISCOSPORT srl all'invio tramite e-mail delle NEWSLETTERS all'indirizzo di posta elettronica indicato sopra, e-mail che potranno contenere oltre alle informazioni di natura fiscale, eventuali banner pubblicitari
+</p>
+  "
+template_iscription:
+  default: "Definire le modalità di iscrizione:
+ Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Pellentesque congue condimentum velit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor lacinia nisi in sodales. Donec viverra euismod dolor, sit amet mattis justo ultricies a. Maecenas rutrum neque sem, eu laoreet diam. Mauris a lorem a lorem facilisis viverra. Proin sed tortor sem. Nam sed ipsum turpis. Duis tellus nisl, sagittis id bibendum sit amet, feugiat at sapien. Aliquam eget odio orci.
+
+Quisque sodales, enim in feugiat euismod, dui ipsum auctor ligula, vel vulputate ante augue porta leo. Ut convallis, est eu condimentum tristique, mi dui convallis ante, at aliquam nisl risus quis lectus. Quisque hendrerit augue sed odio tincidunt imperdiet. Phasellus scelerisque eleifend auctor. Aliquam erat volutpat. Morbi adipiscing mollis ipsum. Curabitur tincidunt placerat posuere. Nullam id velit massa. Nullam euismod leo non ante congue interdum. Donec et ante et risus pulvinar ullamcorper vel sed nunc. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer scelerisque lectus suscipit nunc porttitor egestas. Proin eu euismod enim. Etiam non facilisis nunc. Cras eget est nunc.
   "
