--- a/config/settings.yml
+++ b/config/settings.yml
@@ -276,12 +276,8 @@ La registrazione gratuita dell'utente, in ogni caso, non impegna lo stesso per i
 L’utente autorizza fin d'ora FISCOSPORT srl all'invio tramite e-mail delle NEWSLETTERS all'indirizzo di posta elettronica indicato sopra, e-mail che potranno contenere oltre alle informazioni di natura fiscale, eventuali banner pubblicitari
 </p>
   "
-template_iscription:
-  default: "Definire le modalità di iscrizione:
- Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Pellentesque congue condimentum velit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor lacinia nisi in sodales. Donec viverra euismod dolor, sit amet mattis justo ultricies a. Maecenas rutrum neque sem, eu laoreet diam. Mauris a lorem a lorem facilisis viverra. Proin sed tortor sem. Nam sed ipsum turpis. Duis tellus nisl, sagittis id bibendum sit amet, feugiat at sapien. Aliquam eget odio orci.
-
- Quisque sodales, enim in feugiat euismod, dui ipsum auctor ligula, vel vulputate ante augue porta leo. Ut convallis, est eu condimentum tristique, mi dui convallis ante, at aliquam nisl risus quis lectus. Quisque hendrerit augue sed odio tincidunt imperdiet. Phasellus scelerisque eleifend auctor. Aliquam erat volutpat. Morbi adipiscing mollis ipsum. Curabitur tincidunt placerat posuere. Nullam id velit massa. Nullam euismod leo non ante congue interdum. Donec et ante et risus pulvinar ullamcorper vel sed nunc. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer scelerisque lectus suscipit nunc porttitor egestas. Proin eu euismod enim. Etiam non facilisis nunc. Cras eget est nunc.
-  "
+static_page_abbonamenti:
+  default: "Pagina abbonamenti"
 
 static_page_cosaoffriamo:
   default: "Pagina cosa offriamo"
