--- a/config/settings.yml
+++ b/config/settings.yml
@@ -268,6 +268,8 @@ template_fee_proposal:
   "
 info_fs:
   default: ""
+footer_fs:
+  default: ""
 info_promoted_fs:
   default: 0
 template_privacy:
