--- a/config/settings.yml
+++ b/config/settings.yml
@@ -266,6 +266,8 @@ template_fee_proposal:
     La squadra di Fiscosport
     @@logged_username@@
   "
+info_staff:
+  default: ""
 info_fs:
   default: ""
 footer_fs:
