--- a/config/ckeditor.yml
+++ b/config/ckeditor.yml
@@ -1,28 +1,29 @@
---- 
+---
 options: &options
   swf_file_post_name: "data"
-  
+
   swf_image_file_types_description: "Images"
-  swf_image_file_types: "*.jpg;*.jpeg;*.png;*.gif"
+  swf_image_file_types: "*.jpg;*.jpeg;*.png;*.gif;*.ico"
   swf_image_file_size_limit: "5 MB"
   swf_image_file_upload_limit: 10
-  
+
   swf_types_description: "Files"
-  swf_file_types: "*.doc;*.wpd;*.pdf;*.swf;*.xls"
+  #swf_file_types: "*.doc;*.rar;*.zip;*.wpd;*.pdf;*.swf;*.xls;*.odt;*.xlsx;*.docx;*.ods;*.txt;*.rtf"
+  swf_file_types: "*.swf;"
   swf_file_size_limit: "5 MB"
   swf_file_file_upload_limit: 5
-  
+
   public_uri: "/uploads"
   public_path: "public/uploads"
-  
+
   file_manager_uri: "/ckeditor/files"
   file_manager_upload_uri: "/ckeditor/create?kind=file"
-  
+
   file_manager_image_upload_uri: "/ckeditor/create?kind=image"
   file_manager_image_uri: "/ckeditor/images"
-  
+
 development:
   <<: *options
-  
+
 production:
   <<: *options
