realign pdf after hard reset on server

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 /.loadpath
 /config/additional_environment.rb
 /config/configuration.yml
+config/environment.rb
+config/environments/production.rb
 /config/environments/development.rb
 /config/environments/production.rb
 /config/database.yml
